// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemFilter > can use a custom attribute as display name 1`] = `
"<div class="item-filter oc-flex item-filter-users">
  <div class="oc-filter-chip oc-flex"><button type="button" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-surface oc-button-raw-inverse oc-button-surface-raw-inverse oc-filter-chip-button oc-pill py-1 px-2" id="oc-filter-chip-3">
      <!--v-if-->
      <!-- @slot Content of the button --> <span class="oc-icon oc-icon-s box-content oc-filter-check-icon-inactive"><svg data-testid="inline-svg-stub" src="icons/check-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false"></svg></span> <span class="oc-text-truncate oc-filter-chip-label">Users</span>
      <!--v-if--> <span class="oc-icon oc-icon-s box-content"><svg data-testid="inline-svg-stub" src="icons/arrow-down-s-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false"></svg></span>
    </button>
    <div id="oc-drop-4" class="oc-drop oc-box-shadow-medium oc-rounded oc-filter-chip-drop">
      <div class="oc-card oc-card-body p-2">
        <!--v-if-->
        <div>
          <ul class="oc-list item-filter-list">
            <li class="my-1"><button type="button" class="oc-button oc-rounded oc-button-m oc-button-justify-content-space-between oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw item-filter-list-item oc-flex oc-flex-middle oc-width-1-1 oc-flex-between" data-test-value="Albert Einstein">
                <!--v-if-->
                <!-- @slot Content of the button -->
                <div class="oc-flex oc-flex-middle oc-text-truncate">
                  <!--v-if-->
                  <div></div>
                  <div class="oc-text-truncate">Albert Einstein</div>
                </div>
                <div class="oc-flex">
                  <!--v-if-->
                </div>
              </button></li>
            <li class="my-1"><button type="button" class="oc-button oc-rounded oc-button-m oc-button-justify-content-space-between oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw item-filter-list-item oc-flex oc-flex-middle oc-width-1-1 oc-flex-between" data-test-value="Marie Curie">
                <!--v-if-->
                <!-- @slot Content of the button -->
                <div class="oc-flex oc-flex-middle oc-text-truncate">
                  <!--v-if-->
                  <div></div>
                  <div class="oc-text-truncate">Marie Curie</div>
                </div>
                <div class="oc-flex">
                  <!--v-if-->
                </div>
              </button></li>
          </ul>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`ItemFilter > renders all items 1`] = `
"<div class="item-filter oc-flex item-filter-users">
  <div class="oc-filter-chip oc-flex"><button type="button" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-surface oc-button-raw-inverse oc-button-surface-raw-inverse oc-filter-chip-button oc-pill py-1 px-2" id="oc-filter-chip-1">
      <!--v-if-->
      <!-- @slot Content of the button --> <span class="oc-icon oc-icon-s box-content oc-filter-check-icon-inactive"><svg data-testid="inline-svg-stub" src="icons/check-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false"></svg></span> <span class="oc-text-truncate oc-filter-chip-label">Users</span>
      <!--v-if--> <span class="oc-icon oc-icon-s box-content"><svg data-testid="inline-svg-stub" src="icons/arrow-down-s-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false"></svg></span>
    </button>
    <div id="oc-drop-2" class="oc-drop oc-box-shadow-medium oc-rounded oc-filter-chip-drop">
      <div class="oc-card oc-card-body p-2">
        <!--v-if-->
        <div>
          <ul class="oc-list item-filter-list">
            <li class="my-1"><button type="button" class="oc-button oc-rounded oc-button-m oc-button-justify-content-space-between oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw item-filter-list-item oc-flex oc-flex-middle oc-width-1-1 oc-flex-between" data-test-value="Albert Einstein">
                <!--v-if-->
                <!-- @slot Content of the button -->
                <div class="oc-flex oc-flex-middle oc-text-truncate">
                  <!--v-if-->
                  <div></div>
                  <div class="oc-text-truncate">Albert Einstein</div>
                </div>
                <div class="oc-flex">
                  <!--v-if-->
                </div>
              </button></li>
            <li class="my-1"><button type="button" class="oc-button oc-rounded oc-button-m oc-button-justify-content-space-between oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw item-filter-list-item oc-flex oc-flex-middle oc-width-1-1 oc-flex-between" data-test-value="Marie Curie">
                <!--v-if-->
                <!-- @slot Content of the button -->
                <div class="oc-flex oc-flex-middle oc-text-truncate">
                  <!--v-if-->
                  <div></div>
                  <div class="oc-text-truncate">Marie Curie</div>
                </div>
                <div class="oc-flex">
                  <!--v-if-->
                </div>
              </button></li>
          </ul>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;
